2010-01-21  Dominique Dumont  <dominique.dumont@hp.com> 1.302

	* lib/Config/Model/Tk/NodeViewer.pm (reload): Correctly update
	value column when called

	* lib/Config/Model/Tk/HashEditor.pm (Populate): Mark data as
	modified when deleting all items of a hash.

2009-09-25  Dominique Dumont  <domi.dumont@free.fr>

	* examples/model.pl: Simple model and graphical interface
	example. Thanks to Alexander Becker. (RT 49999)

	* lib/Config/Model/Tk/LeafEditor.pm (try): Avoid warnings
	(RT 49999)

	* lib/Config/Model/TkUI.pm (save): trap write_back error.

2009-09-04  Dominique Dumont  <dominique.dumont@hp.com> 1.301

	* lib/Config/Model/Tk/NodeEditor.pm: New widget to edit several
	config items in the same widget.

2009-09-03  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model/Tk/NodeViewer.pm (Populate): Provide more
	details (type and if possible value) on node elements.

2009-09-01  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model/TkUI.pm (Populate): Use 'beginner' as default
	experience level

2009-08-31  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model/Tk/Wizard.pm: New file. Provides generic wizard
	for configuration edition. This wizard can be run at different
	experience (beginner, advanced or master).

2009-06-28  Dominique Dumont  <domi@ylum.gre.hp.com> v1.211

	* lib/Config/Model/TkUI.pm (save): don't pass undefined dir
	parameter to avoid breaking write back function. (Fixes save
	problem Config::Mode::OpenSsh 1.206)

2009-06-23  Dominique Dumont  <dominique.dumont@hp.com> v1.210

	* lib/Config/Model/Tk/LeafViewer.pm (add_info): use
	upstream_default() method instead of deprecated built_in().

2009-05-30  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model/TkUI.pm (Populate): added -title option so the
	application can set the title of the TkUI window

2009-04-07  Dominique Dumont  <dominique.dumont@hp.com> v1.208

	* lib/Config/Model/Tk/HashEditor.pm (Populate): Improved widget