@@ -80,6 +80,8 @@ sub Populate {
 						-scrollbars => 'ow',
 					      )
                              ->pack(@fbe1);
+	$cw->{e_widget}
+	  ->tagConfigure(qw/value -lmargin1 2 -lmargin2 2 -rmargin 2/);
 	$cw->reset_value ;
 	my $bframe = $cw->add_buttons($ed_frame) ;
 	$bframe -> Button ( -text => 'Cleanup',
@@ -260,7 +262,7 @@ sub reset_value {
     $cw->{value} = $cw->{leaf}->fetch ;
     if (defined $cw->{e_widget}) {
 	$cw->{e_widget}->delete('1.0','end') ;
-	$cw->{e_widget}->insert('end',$cw->{value}) ;
+	$cw->{e_widget}->insert('end',$cw->{value},'value') ;
     }
     $cw->set_value_help if defined $cw->{value_help_widget};
 }
